[gd_scene load_steps=11 format=3 uid="uid://bqiobo4vyvq43"]

[ext_resource type="Script" path="res://scripts/MobExplode.gd" id="1_qccgn"]
[ext_resource type="PackedScene" uid="uid://186ly24olgpo" path="res://scenes/Explosion.tscn" id="2_h8it8"]
[ext_resource type="Texture2D" uid="uid://butgvvew2n3nl" path="res://art/shadow-explosion.png" id="2_lx5sl"]
[ext_resource type="Texture2D" uid="uid://b3nev61a2u57j" path="res://art/mobExplode_spritesheet.png" id="3_5mowu"]
[ext_resource type="Texture2D" uid="uid://csxei1lq6orw2" path="res://art/mobExplode_eye.png" id="6_4q62f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cmhxg"]
radius = 24.0208

[sub_resource type="Animation" id="Animation_br50u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ShadowExplosion:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ShadowExplosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Eye:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.658824, 0.156863, 0.113725, 1)]
}

[sub_resource type="Animation" id="Animation_cie4h"]
resource_name = "pre_explosion"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ShadowExplosion:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.117647)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ShadowExplosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Eye:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-6.28319, -3.14159, 0.0, 3.14159, 6.28319]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(0.658824, 0.156863, 0.113725, 1), Color(1, 1, 1, 1), Color(0.65625, 0.15625, 0.113281, 1), Color(1, 1, 1, 1), Color(0.652344, 0.15625, 0.113281, 1), Color(1, 1, 1, 1), Color(0.65625, 0.15625, 0.113281, 1), Color(1, 1, 1, 1), Color(0.652344, 0.15625, 0.113281, 1), Color(1, 1, 1, 1), Color(0.648438, 0.15625, 0.113281, 1)]
}

[sub_resource type="Animation" id="Animation_qagkc"]
resource_name = "walk"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cwoct"]
_data = {
"RESET": SubResource("Animation_br50u"),
"pre_explosion": SubResource("Animation_cie4h"),
"walk": SubResource("Animation_qagkc")
}

[node name="MobExplode" type="RigidBody2D" groups=["mobs"]]
collision_layer = 2
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_qccgn")
explosion_fx = ExtResource("2_h8it8")

[node name="ShadowExplosion" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_lx5sl")

[node name="Body" type="Sprite2D" parent="."]
modulate = Color(0.658824, 0.156863, 0.113725, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_5mowu")
hframes = 4
frame = 1

[node name="Eye" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_4q62f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cmhxg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Body")
libraries = {
"": SubResource("AnimationLibrary_cwoct")
}

[node name="TimerToExplode" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="TimerToExplode" to="." method="_on_timer_to_explode_timeout"]
